White Space Bug Fixed

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,11 @@ body {
   */
 }
 
+#horizontal ion-scroll
+{
+  height:444px;
+}
+
     #horizontal ion-scroll .item {
       display: inline-block;  
       /* width:200px; Causes cropping when backing up. */
